--- a/k8s/product-service.yaml
+++ b/k8s/product-service.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: product-service-container
-          image: we08arc.azurecr.io/product_service:latest
+          image: we08acr.azurecr.io/product_service:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 8000
