--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,7 @@ services:
       POSTGRES_HOST: product_db # Connects to the 'product_db' service within Docker network
       AZURE_STORAGE_ACCOUNT_NAME: we08storage # Replace with your Azure Storage account name
       AZURE_STORAGE_ACCOUNT_KEY: we08storage # Replace with your Azure Storage account key
-      AZURE_STORAGE_CONTAINER_NAME: we08arc # Replace with your Azure Storage container name
+      AZURE_STORAGE_CONTAINER_NAME: we08acr # Replace with your Azure Storage container name
       AZURE_SAS_TOKEN_EXPIRY_HOURS: 24
     depends_on:
       product_db:
