--- a/k8s/order-service.yaml
+++ b/k8s/order-service.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: order-service-container
-          image: we08acr.azurecr.io/order_service:latest
+          image: we08acr.azurecr.io/order-service:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 8000
