--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -14,7 +14,7 @@ on:
       aks_acr_name:
         description: "Name of ACR"
         required: true
-        default: "we08acr"
+        default: "we08acr.azurecr.io"
       product_image_tag:
         description: "Product Service image tag"
         required: true
